--- a/src/app/pages/device/device.component.html
+++ b/src/app/pages/device/device.component.html
@@ -233,7 +233,7 @@
 
               <div class="ui-g-4">
                 <span class="ui-float-label">
-                  <input pInputText id="gsmLongitude" gsmLongitude="gsmLongitude"
+                  <input pInputText id="gsmLongitude" formControlName="gsmLongitude"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.gsmLongitude.errors }" />
                   <label for="gsmLongitude">{{ 'GSM Longitude' | translate }}</label>
