--- a/src/app/pages/account-management/mail-account.component.html
+++ b/src/app/pages/account-management/mail-account.component.html
@@ -137,8 +137,9 @@
         <p-footer>
           <div *ngIf="mailAccount">
             <div class="ui-dialog-buttonpane ui-helper-clearfix">
-                <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
-                <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
+              <button type="button" *ngIf="mailAccount.id" pButton style="float: left" (click)="delete()" label="Delete"></button>
+              <button type="button" pButton  (click)="close()" label="Close"></button>
+              <button type="button" pButton (click)="save()" label="Save"></button>
             </div>
           </div>
         </p-footer>
