--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -110,8 +110,9 @@
         <p-footer>
           <div *ngIf="userAccount">
             <div class="ui-dialog-buttonpane ui-helper-clearfix">
-              <button type="button" pButton icon="fa fa-close" (click)="delete()" label="Delete"></button>
-              <button type="button" pButton icon="fa fa-check" (click)="save()" label="Save"></button>
+              <button type="button" *ngIf="userAccount.id" pButton style="float: left" (click)="delete()" label="Delete"></button>
+              <button type="button" pButton  (click)="close()" label="Close"></button>
+              <button type="button" pButton (click)="save()" label="Save"></button>
             </div>
           </div>
         </p-footer>
