device - route: fixed bug, added optionLabel attribute to route p-dropdown; as result, it will display label - eg. 'Mirijevo' and this.deviceForm.value will be label.

--- a/src/app/pages/device/device.component.html
+++ b/src/app/pages/device/device.component.html
@@ -50,7 +50,8 @@
             </div>
             <div class="ui-g-3">
               <span class="ui-float-label">
-                <p-dropdown [options]="routes$ | async" name="route"  [autoDisplayFirst]="false"   #ddStatus (onChange)="onRouteChange($event)"  formControlName="route" editable="true"></p-dropdown>
+                <p-dropdown [options]="routes$ | async" name="route" optionLabel="label" [autoDisplayFirst]="false"
+                  #ddStatus (onChange)="onRouteChange($event)" formControlName="route" editable="true"></p-dropdown>
                 <label for="route">{{ 'Route' | translate }}</label>
               </span>
             </div>
