--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -13,14 +13,12 @@
     <nb-action class="control-item">
       <nb-search type="rotate-layout"></nb-search>
     </nb-action>
-    <nb-action class="control-item" icon="bell-outline"></nb-action>
+    <nb-action class="control-item"  (click)="onAlertClick($event);" [badgeText]="alarm$ |  async" [badgeStatus]="status$ | async" icon="bell-outline"></nb-action>
     <nb-action class="user-action" *nbIsGranted="['view', 'user']" >
       <nb-user [nbContextMenu]="userMenu"
-               [onlyPicture]="userPictureOnly"
                [name]="user?.name"
-               [nbContextMenuTag]="tag"
-               [picture]="user?.picture">
-               
+               [nbContextMenuTag]="tag">
+
       </nb-user>
     </nb-action>
   </nb-actions>
