--- a/src/app/pages/account-management/user-account.component.html
+++ b/src/app/pages/account-management/user-account.component.html
@@ -15,7 +15,7 @@
             </span>
           </div>
         </div>
-
+        <div style='clear: both; margin-bottom: 5px;'>&nbsp;</div>
 
         <ngx-table [columns]="cols" [value]="userAccounts" (lazyLoad)="loadUserAccountsLazy($event)"
         [selection]="selectedUserAccount" dataKey="id" [totalRecords]="totalRecords" [loading]="loading"
