--- a/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -24,19 +24,19 @@ selectionMode="single"
 </ng-template>
 <ng-template pTemplate="colgroup" let-columns>
   <colgroup>
-    <col *ngFor="let col of columns "  [style.display]="col.header === 'ID' ? 'none': ''"  [style.width]="col.width" [pSortableColumn]>
+    <col *ngFor="let col of columns "  [style.width]="col.width" [pSortableColumn]>
   </colgroup>
 </ng-template>
 <ng-template pTemplate="header" let-columns>
   <tr>
-    <th *ngFor="let col of columns "  [style.display]="col.header === 'ID' ? 'none': ''" [pSortableColumn]="col.field">
+    <th *ngFor="let col of columns " [pSortableColumn]="col.field">
       {{col.header | translate}}
     </th>
   </tr>
 </ng-template>
 <ng-template pTemplate="body" let-rowData let-columns="columns">
   <tr [pSelectableRow]="rowData">
-    <td *ngFor="let col of columns" [style.font-weight]="fontWeight(styleCondition(rowData, col.field))"  [style.color]="styleColor(styleCondition(rowData, col.field))"   [style.display]="col.header === 'ID' ? 'none': ''" (click)="col.field === 'customerName' && onColumnClick(rowData)" >
+    <td *ngFor="let col of columns" [style.font-weight]="fontWeight(styleCondition(rowData, col.field))"  [style.color]="styleColor(styleCondition(rowData, col.field))"  (click)="col.field === 'customerName' && onColumnClick(rowData)" >
       {{rowData[col.field]}}
     </td>
   </tr>
