--- a/src/app/pages/import-export/export-ado.component.html
+++ b/src/app/pages/import-export/export-ado.component.html
@@ -27,8 +27,8 @@
         <nb-step [stepControl]="adoForm2" label="Import">
           <form [formGroup]="adoForm2" (ngSubmit)="onAdoForm2Submit()" class="step-container">
           <div class="step-container">
-            <h3>RUN EXPORT!</h3>
-            <button nbButton status="primary" (click)="onExport()">export</button>
+            <h3>Download ADO</h3>
+            <button nbButton status="primary" (click)="onExport()">download</button>
           </div>
         </form>
         </nb-step>
