--- a/src/app/pages/alarm/alarm.component.html
+++ b/src/app/pages/alarm/alarm.component.html
@@ -4,7 +4,7 @@
 
       <ngx-title-header title='Alarms'></ngx-title-header>
 
-      <ngx-table [columns]="cols" [value]="alarms$ | async" (lazyLoad)="loadAlarmsLazy($event)"
+      <ngx-table [columns]="columns$ | async" [value]="alarms$ | async" (lazyLoad)="loadAlarmsLazy($event)"
         dataKey="id" [totalRecords]="totalRecords" [loading]="loading" ngClass="alarm-on" ngCondition="On">
       </ngx-table>
 
