export user card: infrastructure work.

--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -140,3 +140,12 @@ body .ui-dropdown .ui-inputtext {
   margin-top: 0.25em;
   display: block;
 }
+
+.input-group {
+  padding-bottom: 6rem !important;
+}
+
+.nb-theme-default [nbButton].appearance-filled.size-medium {
+  padding: 0.6875rem 1.125rem;
+}
+
