--- a/src/app/pages/import-export/import-user-card.component.html
+++ b/src/app/pages/import-export/import-user-card.component.html
@@ -97,9 +97,9 @@
           </form>
         </nb-step>
 
-        <nb-step [stepControl]="fourthForm" label="Import">
+        <nb-step [stepControl]="fourthForm" label="{{'Run Import' | translate}}">
           <div class="step-container">
-            <h3>RUN IMPORT!</h3>
+            <h3>{{'Run Import' | translate}}</h3>
             <button nbButton (click)="onImport()">import</button>
           </div>
         </nb-step>
