--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -11,6 +11,8 @@
         dataKey1="customerId"
         [totalRecords]="totalRecords"
         [loading]="loading"
+        [fontWeightFunction]="fontWeight"
+        [styleColorFunction]="styleColor"
         (clickFunction)="onCustomerNameClick($event)"></ngx-table>
 
       <div style="position: relative; float: right; margin-top: 5px;">
