--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -12,6 +12,27 @@
               <label for="customerName">{{ 'Customer name' | translate }}</label>
             </span>
         </div>
+        <div class="ui-g-2">
+          <span class="ui-float-label">
+            <input pInputText id="route" [(ngModel)]="route"
+              onclick="this.setSelectionRange(0, this.value.length)" />
+            <label for="route">{{ 'Route' | translate }}</label>
+          </span>
+      </div>
+      <div class="ui-g-2">
+        <span class="ui-float-label">
+          <input pInputText id="address" [(ngModel)]="address"
+            onclick="this.setSelectionRange(0, this.value.length)" />
+          <label for="address">{{ 'Address' | translate }}</label>
+        </span>
+    </div>
+    <div class="ui-g-2">
+      <span class="ui-float-label">
+        <input pInputText id="readingBook" [(ngModel)]="readingBook"
+          onclick="this.setSelectionRange(0, this.value.length)" />
+        <label for="readingBook">{{ 'Reading Book' | translate }}</label>
+      </span>
+  </div>
       </div>
       </div>
 
