--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -125,7 +125,7 @@
             </span>
           </div>
           <div class="button-positioner">
-            <p-button icon="fa fa-refresh" label="&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ 'Clear' | translate }}"></p-button>
+            <p-button icon="fa fa-refresh" label="&nbsp;&nbsp;{{ 'Clear' | translate }}"></p-button>
           </div>
         </div>
 
